update readme and spark parameters